# randwelt

./: README.md
backend/: CMakeLists.txt  data.json  entity.cpp  entity.h  webserver  webserver.cpp
docs/: 3rdpartylicenses.txt  index.html  polyfills.3f5c4632db3653814f8f.bundle.js
frontend/: package-lock.json  package.json
frontend/docs/: inline.784fe04cfac541cb84b2.bundle.js  main.706fead8361f65d00c8d.bundle.js
frontend/src/app/: app.component.html  app.module.ts
frontend/src/app/ingame/: ingame.component.css  ingame.component.html  ingame.component.ts
